--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,5 +10,5 @@ metadata:
     backstage.io/github-actions-id: https://github.com/Dviejopomata/backstage-go-test
 spec:
   type: service
-  lifecycle: experimental
+  lifecycle: production
   owner: dviejo
