--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: dviejo
+  owner: user:guest
   providesApis: 
   - spotify
   consumesApis:
